<resources>
	<string name="app_name">CTU Timetable</string>
	<string name="alertDialog_message_googleAccount">The application needs to have access to a valid Google Account
		because it uses its Google Calendar to store data from CTU timetable.
	</string>
	<string name="alterDialog_title_googleAccount">Google Account was not found</string>
	<string name="alertDialog_quit">Quit</string>
	<string name="alertDialog_settings">Settings</string>
	<string name="alertDialog_positive_googleAccount">Log in</string>
	<string name="menuItem_sync">Synchronize timetables</string>
	<string name="menuItem_search">Search</string>
	<string name="alertDialog_message_firstNotice">The application uses CTU timetable and Google Calendar. You have
		to be logged into a CTU account and a Google account.
	</string>
	<string name="alertDialog_positive_firstNotice">Continue</string>
	<string name="alertDialog_title_notice">Notice</string>
	<string name="permissions_rationale">The application needs these permissions to store data from CTU timetable in a
		Google Calendar.\nThe application cannot work without these permissions.
	</string>
	<string name="permissions_rationale_permanent">%1$s Open the app settings screen to modify the app permissions.</string>
	<string name="menuItem_goToToday">Go to today</string>
	<string name="menuItem_goToDate">Go to date</string>
	<string name="roomDefault">Unknown</string>
	<string name="menuItem_CalendarOfflineAvailable">Available offline</string>
	<string name="menuItem_CalendarOfflineUnavailable">Make available offline</string>
	<string name="students">Students</string>
	<string name="capacity">Capacity</string>
	<string name="teachers">Teachers:</string>
	<string name="alertDialog_negative_no">No</string>
	<string name="alertDialog_positive_yes">Yes</string>
	<string name="alertDialog_message_eventClicked">Do you wish to display timetable of %1$s?</string>
	<string name="eventType_Assessment">Assessment</string>
	<string name="eventType_Course_event">One-off event</string>
	<string name="eventType_Exam">Exam</string>
	<string name="eventType_Laboratory">Laboratory</string>
	<string name="eventType_Lecture">Lecture</string>
	<string name="eventType_Tutorial">Tutorial</string>
	<string name="eventType_Teacher_timetable_slot">Teacher timetable slot</string>
	<string name="eventType_Other">Other</string>
	<string name="sidebar_settings">Settings</string>
	<string name="sidebar_dayView">Day view</string>
	<string name="sidebar_3DaysView">3 days view</string>
	<string name="sidebar_WeekView">Week view</string>
	<string name="sidebar_SavedCalendars">Saved timetables</string>
	<string name="snackbar_Undo">Undo</string>
	<string name="snackbar_CalendarUnavailable">Timetable will no longer be available offline.</string>
	<string name="snackbar_CalendarAvailable">Timetable will be made available offline.</string>
	<string name="menuItem_sharePersonalTimetable">Share personal timetable</string>
	<string name="alertDialog_share">Share</string>
	<string name="alertDialog_message_share">Please specify the email address of a Google account you want to share your personal timetable with.</string>
	<string name="menuItem_SaveEvent">Save</string>
	<string name="exceptionUnknown">Unknown exception occurred: %1$s</string>
	<string name="exceptionGoogleAccountNotFound">Specified Google account not found.</string>
	<string name="exceptionCTUInternal">CTU internal server error occurred. Please try again.</string>
	<string name="exceptionTimetableNotFound">Timetable not found.</string>
	<string name="exceptionInternetUnavailable">Could not connect to the internet.</string>
	<string name="hint_EventName">Event name</string>
	<string name="hint_Acronym">Acronym</string>
	<string name="hint_Room">Room</string>
	<string name="hint_Note">Note</string>
	<string name="hint_Teachers">Teachers</string>
	<string name="error_fieldBlank">This field cannot be blank.</string>
	<string name="sidebar_FindFreeTime">Find free time</string>
	<string name="week">Week:</string>
	<string name="time">Time:</string>
	<string name="timetables">Timetables:</string>
	<string name="hint_selectTimetables">Select timetables</string>
	<string name="menuItem_Run">Run</string>
	<string name="exceptionSocket">Exception occurred when trying to connect to the Internet.</string>
	<string name="exceptionUnauthorized">You are not authorized to view timetable of %1$s.</string>
	<string name="sidebar_ShareTimetable">Share timetable</string>
	<string name="message_TimetableUpdated">Timetable of %1$s updated.</string>
	<string name="message_TimetablesUpdated">All timetables updated.</string>
	<string name="message_CalendarRemoved">Timetable removed.</string>
	<string name="message_CalendarAdded">Timetable added.</string>
	<string name="message_CalendarShared">Timetable shared.</string>
	<string name="message_CalendarUnshared">Timetable unshared.</string>
	<string name="alertDialog_message_ctuLogOut">Do you wish to log out of the CTU account?</string>
	<string name="alertDialog_message_googleLogout">Do you wish to log out of the Google account?</string>
	<string name="pref_accounts">Accounts</string>
	<string name="pref_CTULogout">CTU account logout</string>
	<string name="pref_googleLogout">Google account logout</string>
	<string name="pref_lessons">Lessons</string>
	<string name="pref_numOfLessons">Number of lessons</string>
	<string name="pref_StartTime">Start time of lessons</string>
	<string name="pref_lessonLength">Lesson length</string>
	<string name="pref_breakLength">Break length</string>
	<string name="pref_other">Other</string>
	<string name="pref_useMobileData">Use mobile data</string>
	<string name="prefSum_mobileData_true">The application uses only Wi-fi connection.</string>
	<string name="prefSum_mobileData_false">The application uses Wi-fi connection and Mobile data.</string>
	<string name="prefSum_numOfLessons">%1$s lessons</string>
	<string name="prefSum_lessonLength">%1$s min</string>
	<string name="prefSum_breakLength">%1$s min</string>
	<string name="error_belowMin">Minimum allowed value is %1$s.</string>
	<string name="error_aboveMax">Maximum allowed value is %1$s.</string>
	<string name="alertDialog_title_breakLength">Specify length of breaks</string>
	<string name="alertDialog_title_lessonLength">Specify length of lessons</string>
	<string name="alertDialog_title_numOfLessons">Specify number of lessons</string>
	<string name="prefSum_Logout">Currently signed in as %1$s.</string>
	<string name="message_emailListUpdated">List of emails updated.</string>
</resources>
