<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/changeViewGroup">
		<item
			android:id="@+id/sidebarDayView"
			android:icon="@drawable/ic_view_day_black_24dp"
			android:title="@string/sidebar_dayView" />
		<item
			android:id="@+id/sidebarThreeDayView"
			android:icon="@drawable/ic_view_week_black_24dp"
			android:title="@string/sidebar_3DaysView" />
		<item
			android:id="@+id/sidebarWeekView"
			android:icon="@drawable/ic_view_week_black_24dp"
			android:title="@string/sidebar_WeekView" />
		<item
			android:id="@+id/sidebarSavedCalendars"
			android:title="@string/sidebar_SavedCalendars" />
	</group>
	<item
		android:id="@+id/sidebarSettings"
		android:icon="@drawable/ic_settings_black_24dp"
		android:title="@string/sidebar_settings" />
</menu>