<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/itemSearch"
		android:icon="@drawable/ic_search_black_24dp"
		android:title="@string/menuItem_search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="always|collapseActionView" />
	<item
		android:id="@+id/itemOfflineAvailable"
		android:checkable="true"
		android:checked="false"
		android:icon="@drawable/ic_offline_unavailable_black_24dp"
		android:title="@string/menuItem_CalendarOfflineUnavailable"
		app:showAsAction="always|withText" />
	<item
		android:id="@+id/itemGoToToday"
		android:title="@string/menuItem_goToToday"
		app:showAsAction="never" />
	<item
		android:id="@+id/itemGoToDate"
		android:title="@string/menuItem_goToDate"
		app:showAsAction="never" />

</menu>